platform_versioned_docs/version-23.3.0/monitoring/dashboard.mdx
---
title: "Dashboard"
description: "View run status overview in Seqera Platform."
date: "21 Apr 2023"
tags: [dashboard, runs, monitoring]
---

The Seqera Platform **Dashboard**, accessed from the user menu, provides an overview of runs in your personal and organization workspaces.

### Filters and summary

The **Dashboard** view defaults to all organizations and workspaces you can access. Select the **View** dropdown menu to filter by specific organizations and workspaces, or to view statistics for your personal workspace only.

You can filter by time, including a custom date range of up to 12 months. To filter the set of runs, select **Filter**. When a filter is applied, the button icon and color changes.

### Export data

Select **Export data** in the filter panel near the top of the page to export dashboard data, based on the filters you have applied, in a CSV file.

### Runs per organization

Run totals for your selected filters are displayed for each organization that you have access to.

Depending on the filter selected, each card details a separate workspace or organization. Total runs for each organization are arranged by workspace and status.

For a detailed view of runs, you can do one of the following:

- Select a run integer value in the table to navigate to a run list filtered by the status and time range selected.
- Select a workspace name in the table to navigate to a run list filtered by the workspace selected.
